--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@ img {
 .apresentacao__conteudo__titulo{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
+    text-align: center;
 }
 
 .titulo-destaque{
@@ -82,6 +83,7 @@ img {
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+    text-align: center;
 }
 
 .apresentacao__conteudo__texto a{ 
